<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_titulo1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Registro de autos"
                android:textSize="20dp"
                android:textColor="@color/teal_700"
                android:textStyle="bold"
                android:gravity="center"/>
            <ImageView
                android:id="@+id/imagen1"
                android:layout_width="120dp"
                android:layout_height="100dp"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_car"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp">
                <LinearLayout
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="left"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="14dp"
                        android:text="Marca"
                        android:textSize="16dp"
                        android:textColor="@color/black"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Modelo"
                        android:textSize="16dp"
                        android:layout_marginTop="16dp"
                        android:textColor="@color/black"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Cilindraje(cc)"
                        android:textSize="16dp"
                        android:layout_marginTop="18dp"
                        android:textColor="@color/black"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Manejo"
                        android:textSize="16dp"
                        android:layout_marginTop="19dp"
                        android:textColor="@color/black"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Color"
                        android:textSize="16dp"
                        android:layout_marginTop="19dp"
                        android:textColor="@color/black"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Año"
                        android:textSize="16dp"
                        android:layout_marginTop="19dp"
                        android:textColor="@color/black"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Placa"
                        android:textSize="16dp"
                        android:layout_marginTop="19dp"
                        android:textColor="@color/black"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Matricula"
                        android:textSize="16dp"
                        android:layout_marginTop="19dp"
                        android:textColor="@color/black"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Pais de importacion"
                        android:textSize="16dp"
                        android:layout_marginTop="18dp"
                        android:textColor="@color/black"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Precio ($)"
                        android:textSize="16dp"
                        android:layout_marginTop="18dp"
                        android:textColor="@color/black"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="right"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    >

                    <EditText
                        android:id="@+id/txt_marca"
                        android:layout_width="match_parent"
                        android:layout_height="37dp"
                        android:layout_marginTop="5dp"
                        android:textSize="16dp"
                        android:textColor="@color/black"
                        android:hint="@string/marca"
                        android:background="@drawable/shape_border_editex"
                        />
                    <EditText
                        android:id="@+id/txt_modelo"
                        android:layout_width="match_parent"
                        android:layout_height="37dp"
                        android:layout_marginTop="5dp"
                        android:textSize="16dp"
                        android:textColor="@color/black"
                        android:hint="@string/modelo"
                        android:background="@drawable/shape_border_editex"/>

                    <EditText
                        android:id="@+id/txt_cilindraje"
                        android:layout_width="match_parent"
                        android:layout_height="37dp"
                        android:layout_marginTop="5dp"
                        android:textSize="16dp"
                        android:textColor="@color/black"
                        android:hint="@string/cilindraje"
                        android:background="@drawable/shape_border_editex"/>
                    <EditText
                        android:id="@+id/txt_manejo"
                        android:layout_width="match_parent"
                        android:layout_height="37dp"
                        android:layout_marginTop="5dp"
                        android:textSize="16dp"
                        android:textColor="@color/black"
                        android:hint="@string/manejo"
                        android:background="@drawable/shape_border_editex"/>
                    <EditText
                        android:id="@+id/txt_color"
                        android:layout_width="match_parent"
                        android:layout_height="37dp"
                        android:layout_marginTop="5dp"
                        android:textSize="16dp"
                        android:textColor="@color/black"
                        android:hint="@string/color"
                        android:background="@drawable/shape_border_editex"/>

                    <EditText
                        android:id="@+id/txt_año"
                        android:layout_width="match_parent"
                        android:layout_height="37dp"
                        android:layout_marginTop="5dp"
                        android:textSize="16dp"
                        android:textColor="@color/black"
                        android:hint="@string/año"
                        android:background="@drawable/shape_border_editex"/>
                    <EditText
                        android:id="@+id/txt_placa"
                        android:layout_width="match_parent"
                        android:layout_height="37dp"
                        android:layout_marginTop="5dp"
                        android:textSize="16dp"
                        android:textColor="@color/black"
                        android:hint="@string/placa"
                        android:background="@drawable/shape_border_editex"/>
                    <EditText
                        android:id="@+id/txt_matricula"
                        android:layout_width="match_parent"
                        android:layout_height="37dp"
                        android:layout_marginTop="5dp"
                        android:textSize="16dp"
                        android:textColor="@color/black"
                        android:hint="@string/matricula"
                        android:background="@drawable/shape_border_editex"/>
                    <EditText
                        android:id="@+id/txt_importacion"
                        android:layout_width="match_parent"
                        android:layout_height="37dp"
                        android:layout_marginTop="5dp"
                        android:textSize="16dp"
                        android:textColor="@color/black"
                        android:hint="@string/importacion"
                        android:background="@drawable/shape_border_editex"/>
                    <EditText
                        android:id="@+id/txt_precio"
                        android:layout_width="match_parent"
                        android:layout_height="37dp"
                        android:layout_marginTop="5dp"
                        android:textSize="16dp"
                        android:textColor="@color/black"
                        android:hint="@string/precio"
                        android:background="@drawable/shape_border_editex"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_registrar"
                    android:layout_width="150dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/style_border_botton"
                    android:onClick="Enviar"
                    android:text="Registrar" />

                <Button
                    android:id="@+id/btn_verLista"
                    android:layout_width="150dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/style_border_botton"
                    android:onClick="verLista"
                    android:text="ver lista" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>